@@ -5,11 +5,11 @@ plan 3;
 
 sub sanity{
 	my %sane = zip 'a'..'d',1..4;
-	is(%sane.ref,'Hash','%sane is a Hash');
+	isa_ok(%sane, Hash, '%sane is a Hash');
 }
 
 sub insanity (Hash %baloney) returns Void{
-	is(%baloney.ref,'Hash','%baloney is a Hash');
+	isa_ok(%baloney, Hash, '%baloney is a Hash');
 }
 
 # sanity 0
